# dzr

./: .gitignore  Deezer.java  DeezerAPI.js  README.md  crypto.c  deezer.py  dzr  dzr-api  dzr-db  dzr-dec  dzr-id3  dzr-md5  dzr-srt  dzr-url  dzr.c  flake.nix  index.html  index.js  nx.json  snapcraft.yaml
.github/: FUNDING.yml
.github/workflows/: ci.yml  push.yml
chrome-extension/: blowfish.js  content.js  dzr.html  dzr.js  manifest.json  md5.js  service.js
extension/: main.js  package.json  webview.html
notepad-plus-plus/: Makefile
notepad-plus-plus/src/: Notepad_plus_msgs.h  NppPluginDemo.cpp  NppPluginDemo.rc  PluginDefinition.cpp  PluginDefinition.h  dzr.cpp  menuCmdID.h
notepad-plus-plus/src/DockingFeature/: GoToLineDlg.cpp  GoToLineDlg.h  StaticDialog.cpp  StaticDialog.h  resource.h
player-c/: .gdb_history  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile-old  cheatsheet.md  cmake_install.cmake  dzr
player-c/src/: dzr.c  dzr.cpp  dzr.h  logging.h  requests.c  requests.h
vlc-extension/: README.md  build.cmd  dzr.lua  ex_Radio_Browser_info.lua  ex_dzr.lua  m_json.lua  teste.lua  vlsub.lua
vscode-extension/: main.js  webview.html
